umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_triphenyl-phosphate-contracted.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 25
sum_formula: C18O4P
graph6: "ViO_S?A?G?_@?`????GG@@???@GA????C??@???GA??_"
