umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_chebi_ChEBI_138139.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 51
bond_count: 50
sum_formula: C43O6P-1
graph6: rI_cc@?@??_@?@??_?G?@??C??G@????C??@???G???_??@???@_???????O???@????C????G????G????C????@?????G?????_??_???????@??????_?????G?????@??????C???_??????C???????G???????O??@????????_??????????O???????A???????A?@????????
