umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_chembl_heme_2d.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 73
bond_count: 76
sum_formula: C34H30FeN4O4-2
graph6: ~?@H?????G@?O?_?_?O?G?C??K??_??_??S??D??A@??GC??E???_???G???G?G??_C??@????A?????_????O????A?????O????@?????A?????A?????@??????@??????Go?????_o????@???O??????A???????_??????@????????O??????@???????@???????@????????O???????C????????_???????@????????A????????A?????????_????????G????????@?????????A?????????C?????????C?????????@??????????G??????????_?????????A??????????A??????????A???????????_??????????G???????????_??????????A?????????????????
